services landing + contact us page

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -1,6 +1,11 @@
+body {
+  // --wp--style--global--content-size: 1230px;
+}
+
 $colors: (
   primary: #67ffbb,
   secondary: #c2dcdc,
+  secondaryLight: #e2fbfb,
   headerBG: #fff,
   brandBlack: #151b22,
   gray: #333,
