--- a/resources/assets/styles/layouts/_footer.scss
+++ b/resources/assets/styles/layouts/_footer.scss
@@ -2,6 +2,7 @@
   padding: 64px 0 32px;
   background: color("brandBlack");
   color: white;
+  overflow: hidden;
 
   &__inner {
     display: flex;
