--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -27,8 +27,11 @@
 @import "components/social-media";
 @import "components/share-bar";
 @import "components/side-scroll";
-@import "components/autocomplete";
 @import "components/aventi-spacer";
+@import "blocks/hero";
+@import "blocks/numbered-cards";
+@import "blocks/testimonial-carousel";
+@import "blocks/cta-block";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
