--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -14,3 +14,38 @@ body {
     padding-top: $headerHeightMobile;
   }
 }
+
+.has-astro-background-color {
+  background: var(--wp--preset--color--astro);
+}
+
+.has-night-background-color {
+  background: var(--wp--preset--color--night);
+}
+
+.has-aventi-blue-background-color {
+  background: var(--wp--preset--color--aventi-blue);
+}
+
+.has-light-grey-background-color {
+  background: var(--wp--preset--color--light-grey);
+}
+
+.has-light-blue-background-color {
+  background: var(--wp--preset--color--light-blue);
+}
+
+.has-cream-background-color {
+  background: var(--wp--preset--color--cream);
+}
+
+.wp-block-columns {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1230px;
+  padding: 0 10px;
+
+  @include breakpoint(medium up) {
+    padding: 0 15px;
+  }
+}
