--- a/resources/assets/styles/common/_typography.scss
+++ b/resources/assets/styles/common/_typography.scss
@@ -1,36 +1,84 @@
-.pretitle {
-  display: block;
-  margin-bottom: 8px;
-  color: color("primary");
+body {
+  color: color(brandBlack);
+}
+
+h1,
+.like-h1 {
+  line-height: 1.08;
+  font-size: 64px;
   font-weight: 500;
 }
 
-.like-h1 {
-  @extend h1;
-}
-
+h2,
 .like-h2 {
-  @extend h2;
+  font-size: 56px;
+  font-weight: 300;
+  line-height: 1.15;
 }
 
+h3,
 .like-h3 {
-  @extend h3;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 1.1;
 }
 
+h4,
 .like-h4 {
-  @extend h4;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 1.1;
 }
 
+h5,
 .like-h5 {
-  @extend h5;
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 1.2;
 }
 
 .like-h6 {
-  @extend h6;
+  @extend h6 !optional;
 }
 
 p {
+  margin-bottom: 32px;
+
   a {
     text-decoration: underline;
   }
+}
+
+a {
+  &:hover,
+  &:focus {
+    color: inherit;
+  }
+}
+
+.text-large {
+  font-size: 35px;
+  line-height: 1.2;
+  font-weight: 400;
+}
+
+.text-med {
+  font-size: 24px;
+  line-height: 1.25;
+  font-weight: 300;
+}
+
+.text-small {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.caps-title {
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 1.4;
+  letter-spacing: 0.78px;
+  margin-bottom: 5px;
 }
