--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -1,13 +1,13 @@
 .aventi-btn {
   display: inline-block;
   background: color("primary");
-  color: color("brandBlack");
   border: 1px solid color("primary");
+  color: color("brandBlack");
   border-radius: 24px;
   padding: 12px 22px;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 18px;
-  transition: color 350ms, background 350ms;
+  transition: 350ms;
   cursor: pointer;
 
   &:hover {
@@ -20,9 +20,9 @@
   }
 
   &--outline {
-    border-color: color("brandBlack");
     background: white;
-    color: color("brandBlack");
+    border-color: color("brandBlack");
+    font-weight: 400;
 
     &:hover {
       border-color: color("primary");
@@ -32,8 +32,12 @@
   }
 
   &--arrow {
+    background: none;
     border: none;
     padding: 0;
+    border-radius: 0;
+    border-bottom: 1px solid color("brandBlack");
+    font-size: 14px;
 
     i {
       margin-left: 5px;
@@ -42,38 +46,11 @@
     }
 
     &:hover {
-      background: none;
-      color: color("secondary");
+      border-bottom: 1px solid transparent;
 
       i {
         transform: translateX(10px);
       }
     }
-  }
-
-  &--blue {
-    color: color("primary");
-    border-color: color("brandGrayLight3");
-
-    &:hover {
-      color: white;
-      background: color("primary");
-      border-color: color("primary");
-    }
-  }
-
-  &--inverse {
-    color: white;
-    border-color: white;
-    background: transparent;
-
-    &:hover {
-      background: white;
-      color: color("primary");
-    }
-  }
-
-  .link-end {
-    display: inline-block;
   }
 }
