--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -1,5 +1,6 @@
 .header {
   position: fixed;
+  z-index: 99;
   top: 0;
   left: 0;
   width: 100%;
@@ -9,6 +10,10 @@
 
   .logged-in & {
     top: 46px;
+
+    &__menu {
+      top: calc(#{$headerHeightMobile} + 46px);
+    }
   }
 
   &__inner {
@@ -18,29 +23,95 @@
   }
 
   &__logo {
-    // CSS
+    position: relative;
+
+    img {
+      transition: opacity 300ms;
+
+      &:nth-of-type(2) {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+      }
+    }
   }
 
   &__menu {
     margin: 0 auto;
     display: none;
+    position: fixed;
+    top: $headerHeightMobile;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow: auto;
+    padding: 0 10px;
+    transform: translateX(-100%);
+    transition: 400ms;
 
-    .menu {
-      display: flex;
-      align-items: center;
+    ul {
       list-style: none;
       margin: 0;
 
-      li {
-        a {
-          font-size: 18px;
-          letter-spacing: 0.18px;
-          font-weight: 400;
+      a {
+        font-size: 18px;
+        letter-spacing: 0.18px;
+        font-weight: 400;
+      }
+    }
+
+    .menu {
+      > li {
+        > a {
+          // CSS
         }
       }
 
       .sub-menu {
         display: none;
+      }
+    }
+
+    &-toggle {
+      cursor: pointer;
+      width: 26px;
+      text-align: left;
+      margin-left: 20px;
+
+      span {
+        height: 2px;
+        width: 26px;
+        background-color: black;
+        display: block;
+        margin-bottom: 6px;
+        transition: 400ms;
+
+        &.top {
+          margin-top: 6px;
+        }
+      }
+
+      &.toggled {
+        span {
+          // width: 34px;
+
+          &.top {
+            margin-bottom: -2px;
+            transform: rotate(-45deg);
+          }
+
+          &.mid {
+            transform: rotate(45deg);
+          }
+
+          &.bottom {
+            opacity: 0;
+            margin-top: -6px;
+            transform: rotate(-45deg);
+          }
+        }
       }
     }
   }
@@ -52,6 +123,8 @@
   }
 
   &__search {
+    display: none;
+
     &__trigger {
       cursor: pointer;
     }
@@ -66,17 +139,87 @@
     display: none;
   }
 
+  &.open {
+    background: #0b2442;
+    color: white;
+
+    .header {
+      &__logo {
+        img {
+          opacity: 0;
+
+          &:last-child {
+            opacity: 1;
+          }
+        }
+      }
+
+      &__menu {
+        background: linear-gradient(0deg, #2f5785 0%, #0b2442 100%);
+        display: flex;
+        transform: translateX(0);
+
+        > div {
+          width: 100%;
+        }
+
+        .menu {
+          width: 100%;
+
+          > li {
+            width: 100%;
+
+            > a {
+              color: white;
+              font-size: 20px;
+              letter-spacing: 0.2px;
+              padding: 16px 0;
+              display: flex;
+              border-bottom: 1px solid #5882a6;
+            }
+          }
+        }
+
+        &-toggle {
+          span {
+            background: white;
+          }
+        }
+      }
+
+      &__search {
+        &__trigger {
+          img {
+            filter: invert(1);
+          }
+        }
+      }
+    }
+  }
+
   @include breakpoint(medium up) {
     height: $headerHeightTablet;
 
     &__inner {
       height: $headerHeightTablet;
     }
+
+    &__menu {
+      padding: 0 15px;
+    }
+
+    &__search {
+      display: block;
+    }
   }
 
   @include breakpoint(783px up) {
     .logged-in & {
       top: 32px;
+
+      &__menu {
+        top: calc(#{$headerHeightMobile} + 32px);
+      }
     }
   }
 
@@ -90,6 +233,125 @@
     &__menu,
     &__button {
       display: block;
+    }
+
+    &__menu {
+      height: 100%;
+      position: static;
+      background: none;
+      overflow: visible;
+      padding: 0;
+      transform: none;
+
+      > div {
+        height: 100%;
+      }
+
+      .menu {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        gap: 32px;
+
+        li {
+          height: 100%;
+
+          a {
+            position: relative;
+            display: flex;
+            align-items: center;
+            height: 100%;
+
+            &::before {
+              content: "";
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              right: 0;
+              width: 0;
+              background: color(primary);
+              height: 4px;
+              transition: 150ms;
+            }
+
+            &:hover {
+              color: color(brandBlack);
+
+              &::before {
+                width: 100%;
+              }
+            }
+          }
+
+          .sub-menu {
+            pointer-events: none;
+            opacity: 0;
+            transform: translateX(-50%) translateY(50px);
+            transition: opacity 300ms, transform 300ms;
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            min-width: 280px;
+            display: flex;
+            flex-direction: column;
+            background: white;
+            padding: 4px 20px;
+
+            > li {
+              > a {
+                display: block;
+                padding: 12px 0;
+              }
+
+              & + li {
+                border-top: 1px solid #d0d1d3;
+              }
+            }
+          }
+
+          &.current-menu-item {
+            > a {
+              &::before {
+                width: 100%;
+              }
+            }
+          }
+
+          &.menu-item-has-children {
+            position: relative;
+
+            a {
+              &::after {
+                content: "";
+                width: 8px;
+                height: 4px;
+                background-image: url("../images/chevron-down.svg");
+                background-size: 100%;
+                margin-left: 3px;
+                transition: 150ms;
+              }
+
+              &:hover {
+                &::after {
+                  transform: rotate(180deg);
+                }
+              }
+            }
+
+            &:hover {
+              .sub-menu {
+                pointer-events: all;
+                opacity: 1;
+                transform: translateX(-50%) translateY(0);
+              }
+            }
+          }
+        }
+      }
+
+      &-toggle {
+        display: none;
+      }
     }
   }
 }
