--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -8,11 +8,7 @@ $colors: (
   secondaryLight: #e2fbfb,
   headerBG: #fff,
   brandBlack: #151b22,
-  gray: #333,
-  greenSuccess: #6dd230,
-  brandGrayLight: #f5f5f5,
-  brandGrayLight2: #f1f0f0,
-  brandGrayLight3: #e5e5e5,
+  blueLight: #d0eefa,
 );
 
 @function color($color) {
