--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -137,6 +137,10 @@
   &__button {
     margin-left: 20px;
     display: none;
+
+    .aventi-btn {
+      font-weight: 400;
+    }
   }
 
   &.open {
