--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -32,6 +32,9 @@
 @import "blocks/numbered-cards";
 @import "blocks/testimonial-carousel";
 @import "blocks/cta-block";
+@import "blocks/text-image";
+@import "blocks/word-marquee";
+@import "blocks/team-grid";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
