--- a/resources/assets/styles/blocks/_hero.scss
+++ b/resources/assets/styles/blocks/_hero.scss
@@ -21,7 +21,9 @@
     position: relative;
 
     &--text {
-      // CSS
+      max-width: 836px;
+      margin: 0 auto;
+      padding-bottom: 166px;
     }
 
     &--image-text {
@@ -66,6 +68,6 @@
   }
 
   &--theme-light-grid {
-    // CSS
+    background: color(blueLight);
   }
 }
