--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -10,19 +10,42 @@
   transition: 350ms;
   cursor: pointer;
 
-  &:hover {
-    background: color("secondary");
-    color: white;
-  }
-
   &:focus {
     outline: none;
   }
 
+  &--pill {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: color("primary");
+      border-radius: 24px;
+      transition: 300ms;
+    }
+
+    &:hover {
+      color: color("brandBlack");
+
+      &::before {
+        transform: scaleX(1.1) scaleY(1.2);
+      }
+    }
+
+    .link-inner {
+      position: relative;
+    }
+  }
+
   &--outline {
-    background: white;
+    background: transparent;
     border-color: color("brandBlack");
-    font-weight: 400;
+    // font-weight: 400;
 
     &:hover {
       border-color: color("primary");
